--- a/budget-calculator/src/App.css
+++ b/budget-calculator/src/App.css
@@ -1,12 +1,12 @@
 ul {
   list-style-type: none;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-/* li + li {
-  margin-top: 10px;
-  border-top: 1px solid black;
-  padding-top: 10px;
-} */
+p {
+  font-style: italic;
+}
 
 button {
   cursor: pointer;
@@ -48,7 +48,7 @@ div:focus {
 
 .item-group {
   margin-bottom: 50px;
-  width: 70%;
+  width: 100%;
 }
 
 .item-group + .item-group {
@@ -89,4 +89,24 @@ div:focus {
 .item-selected:hover {
   box-shadow: 0px 5px 8px #808C80;
   transform: translate(0px, -5px);
+}
+
+.sticky-box {
+  display: flex;
+  align-items: flex-start;
+  margin-left: 5px;
+}
+
+.over-budget {
+  color: red;
+  font-style: italic;
+}
+
+.budget-box {
+  background-color: #DFE6E9;
+  /* border-width: 1px;
+  border-style: solid; */
+  width: 350px;
+  padding: 5px;
+  box-shadow: 0px 0px 8px #808C80;
 }
