--- a/budget-calculator/src/App.css
+++ b/budget-calculator/src/App.css
@@ -46,6 +46,10 @@ div:focus {
   margin-right: 10px;
 }
 
+.ml-3 {
+  margin-left: 3px;
+}
+
 .item-group {
   margin-bottom: 50px;
   width: 100%;
@@ -104,9 +108,23 @@ div:focus {
 
 .budget-box {
   background-color: #DFE6E9;
-  /* border-width: 1px;
-  border-style: solid; */
   width: 350px;
   padding: 5px;
   box-shadow: 0px 0px 8px #808C80;
+}
+
+.submit-button {
+  border-style: solid;
+  border-width: 1px;
+  padding: 3px 8px;
+  margin: 0px;
+  width: fit-content;
+  background-color: white;
+  cursor: pointer;
+}
+
+.right-align {
+  position: absolute;
+  right: 0px;
+  bottom: -45px;
 }
